force-app/main/default/objects/Engagement_Allocation__c/Engagement_Allocation__c.object-meta.xml
<CustomObject>
    <label>Engagement Allocations</label>
    <nameField>
        <label>Engagement Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>