force-app/main/default/objects/Engagement_Allocation__c/fields/Engagement_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Industry_Group__c</fullName>
    <description>Engagement Industry Group</description>
    <formula>TEXT(Engagement__r.Industry_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Industry Group</label>
    <type>Text</type>
</CustomField>