force-app/main/default/objects/Engagement_Allocation__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal Year For FVA Group</description>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>