force-app/main/default/objects/Engagement_Allocation__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADG - Aerospace Defense and Government</fullName>
            </value>
            <value>
                <fullName>BUS - Business Services</fullName>
            </value>
            <value>
                <fullName>CFR - Consumer Food &amp; Retail</fullName>
            </value>
            <value>
                <fullName>CM - Capital Markets</fullName>
            </value>
            <value>
                <fullName>CORP - Corporate</fullName>
            </value>
            <value>
                <fullName>FIG - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>FS - Financial Sponsors</fullName>
            </value>
            <value>
                <fullName>FT - Financial Technology</fullName>
            </value>
            <value>
                <fullName>GEN - General</fullName>
            </value>
            <value>
                <fullName>HC - Healthcare</fullName>
            </value>
            <value>
                <fullName>IFA - Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>IG - Industrials</fullName>
            </value>
            <value>
                <fullName>M&amp;A - Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>NRG - Energy</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>POW - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>RE - Real Estate Lodging and Leisure</fullName>
            </value>
            <value>
                <fullName>SOV - Sovereigns</fullName>
            </value>
            <value>
                <fullName>TAG - Tangible Asset Group</fullName>
            </value>
            <value>
                <fullName>TECH - Technology</fullName>
            </value>
            <value>
                <fullName>TRANS - Transportation &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>DA - Data &amp; Analytics</fullName>
                <isActive>false</isActive>
                <label>DA - Data &amp; Analytics</label>
            </value>
            <value>
                <fullName>TMT - Technology Media &amp; Telecommunications</fullName>
                <isActive>false</isActive>
                <label>TMT - Technology Media &amp; Telecommunications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>