force-app/main/default/objects/Engagement_Allocation__c/fields/Industry_Group_Fee__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Fee__c</fullName>
    <label>Industry Group Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>