force-app/main/default/objects/Engagement_Allocation__c/fields/Product_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialty__c</fullName>
    <label>Product Specialty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CVAS - Complex Securities</fullName>
            </value>
            <value>
                <fullName>CVAS - Personal Property</fullName>
            </value>
            <value>
                <fullName>DRC SPA Consultation</fullName>
            </value>
            <value>
                <fullName>DVC</fullName>
                <label>TAS- DVC</label>
            </value>
            <value>
                <fullName>M&amp;A Tax Structuring</fullName>
                <label>TAS- M&amp;A Tax Structuring</label>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>TAS- Accounting and Financial Reporting Advisory</fullName>
            </value>
            <value>
                <fullName>TAS- Due Diligence-Buyside</fullName>
            </value>
            <value>
                <fullName>TAS- Due Diligence- Sellside</fullName>
            </value>
            <value>
                <fullName>TAS- Lender Services</fullName>
            </value>
            <value>
                <fullName>TAS- TAX</fullName>
            </value>
            <value>
                <fullName>Tech &amp; Cyber Diligence</fullName>
                <label>TAS- Tech &amp; Cyber Diligence</label>
            </value>
            <value>
                <fullName>AFR</fullName>
                <isActive>false</isActive>
                <label>AFR</label>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
                <isActive>false</isActive>
                <label>Dispute Resolution</label>
            </value>
            <value>
                <fullName>GEN - General</fullName>
                <isActive>false</isActive>
                <label>GEN - General</label>
            </value>
            <value>
                <fullName>Generalist/ Healthcare</fullName>
                <isActive>false</isActive>
                <label>Generalist/ Healthcare</label>
            </value>
            <value>
                <fullName>Generalist/ TMT</fullName>
                <isActive>false</isActive>
                <label>Generalist/ TMT</label>
            </value>
            <value>
                <fullName>Portfolio Valuation</fullName>
                <isActive>false</isActive>
                <label>Portfolio Valuation</label>
            </value>
            <value>
                <fullName>Tax &amp; Financial Reporting</fullName>
                <isActive>false</isActive>
                <label>Tax &amp; Financial Reporting</label>
            </value>
            <value>
                <fullName>Tech+IP Advisory</fullName>
                <isActive>false</isActive>
                <label>Tech+IP Advisory</label>
            </value>
            <value>
                <fullName>Transaction Advisory Services</fullName>
                <isActive>false</isActive>
                <label>Transaction Advisory Services</label>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
                <isActive>false</isActive>
                <label>Transaction Opinions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>