force-app/main/default/objects/Engagement_Allocation__c/fields/Product_Specialty_Fee__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialty_Fee__c</fullName>
    <label>Product Specialty Fee</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>