force-app/main/default/objects/Engagement_Allocation__c/fields/TAS_Service__c.field-meta.xml
<CustomField>
    <fullName>TAS_Service__c</fullName>
    <label>TAS Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Specialty__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFR</fullName>
            </value>
            <value>
                <fullName>Bankruptcy/Restructuring</fullName>
            </value>
            <value>
                <fullName>Buyside AFR</fullName>
            </value>
            <value>
                <fullName>Buyside Diligence – Full Scope</fullName>
            </value>
            <value>
                <fullName>Buyside Diligence – Limited Scope Add-On</fullName>
            </value>
            <value>
                <fullName>Capital Raise</fullName>
            </value>
            <value>
                <fullName>Capital Raise – IPO</fullName>
            </value>
            <value>
                <fullName>Capital Raise – Non-IPO</fullName>
            </value>
            <value>
                <fullName>Carve-Out</fullName>
            </value>
            <value>
                <fullName>Cross-Border GAAP</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>DVC</fullName>
            </value>
            <value>
                <fullName>Fresh Start Accounting</fullName>
            </value>
            <value>
                <fullName>GAAP Conversion</fullName>
            </value>
            <value>
                <fullName>Lender Services – Diligence</fullName>
            </value>
            <value>
                <fullName>Lender Services – Other</fullName>
            </value>
            <value>
                <fullName>M&amp;A Tax Structuring</fullName>
            </value>
            <value>
                <fullName>Purchase Accounting</fullName>
            </value>
            <value>
                <fullName>SEC/Financial Reporting Assistance</fullName>
            </value>
            <value>
                <fullName>Sellside Diligence</fullName>
            </value>
            <value>
                <fullName>Spinoff/Carve-Out</fullName>
            </value>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
            <value>
                <fullName>Tax Diligence</fullName>
            </value>
            <value>
                <fullName>Tax – Other</fullName>
            </value>
            <value>
                <fullName>Tax Structuring</fullName>
            </value>
            <value>
                <fullName>Tech &amp; Cyber Diligence</fullName>
            </value>
            <value>
                <fullName>Technical Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>